# Django_drf

./: pyproject.toml
config/: settings.py  urls.py
lms/: admin.py  models.py  serializers.py  tests.py  urls.py  vaidators.py  views.py
lms/management/commands/: cgm.py  csu.py
lms/migrations/: 0001_initial.py  0002_alter_course_preview_alter_lesson_preview.py  0003_course_owner_lesson_owner_alter_lesson_name_and_more.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_alter_user_options.py
